maybe got the network graph?

--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -10,17 +10,96 @@ Michael Levy gave a presentation to D-RUG Oct. 2014
 http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
 
 ## Hadleyverse
-<div class="columns-2">
-  ![Image](hadleyversecropped.png)
+```{r loadanddownload, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= TRUE}
+#code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/
 
-A collection of tools to:
-  - Ingest
-  - Manipulate
-  - Visualize
-  - Create packages
-  - Simplify programming
-  - + data packages
-</div>
+#Import as data frame the RDS file with packages information. It can be obtained from CRAN,
+download.file("http://cran.r-project.org/web/packages/packages.rds", "packages.rds")
+rds <- readRDS(file="packages.rds")
+data <- as.data.frame(rds, stringsAsFactors = FALSE)
+```
+
+```{r igraphplot, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= FALSE, fig.width=9, fig.height=6, dpi=90}
+library(lazyeval)
+library(dplyr)
+library(igraph)
+
+data <- data[,!duplicated(names(data))] #Eliminate duplicated names column
+names(data) <- gsub(" ","_", names(data))
+names(data) <- gsub("/","_", names(data))
+names(data) <- gsub("@","_", names(data))
+
+data <- tbl_df(data)
+
+hadley <- data %>%
+  filter(grepl("Hadley Wickham|Hadley\nWickham", Author)) %>%
+  select(Package, Author, Depends, Imports, Suggests, LinkingTo, Enhances)
+
+#Vector of packages
+packages <- unique(hadley$Package)
+
+relations <- function(var){
+  temp <- strsplit(var, ",") #Split string of dependences
+  package2 <- unlist(temp) #
+  #Eliminate some characters...
+  package2 <- gsub(" ","", package2) 
+  package2 <- gsub("\\(.*\\)","",package2)
+  package2 <- gsub("\n","",package2)
+  package1 <- rep(hadley$Package,unlist(lapply(temp,length))) #Obtain the corresponding id
+  df <- data.frame(package1,package2, stringsAsFactors = FALSE)
+  #We want only related packages created by H.W.
+  df <- df %>%
+    filter(package2%in%packages,
+           package2!=package1
+           )
+  return(df)
+}
+
+#Apply the function to each variable and collapse the resulting list to a single data frame
+hadley2 <- lapply(hadley, relations)
+hadley2 <- do.call("rbind", hadley2)
+
+#Eliminate possible duplicates
+edges <- tbl_df(distinct(hadley2))  
+
+g <- graph.data.frame(edges, vertices= packages,  directed = F) # We create the igraph object based on the "edges" data frame
+
+# Edges Properties
+
+E(g)$arrow.width <- 0 # I don't want end of arrows to be displayed but that can change in the future
+E(g)$curved <- 0.2 #Make edges curved
+E(g)$color  <- "#F2F2F2"
+E(g)$width  <- 1.5
+
+# Vertex Properties
+V(g)$label.family <- "sans" #Label font family
+V(g)$label.cex <- 0.8 # Label font size proportional to 12
+V(g)$label.color <- "#333333" # Label font color
+V(g)$label.font <- 1 #1 plain, 2 bold, 3 italic, 4 bold and italic
+V(g)$size <- degree(g, mode = "in", loops = F) #Size proportional to degree
+
+#cl <- optimal.community(g) #Find communities in the network, takes 15 minutes
+
+
+#Color of vertices based on communities
+#V(g)$color <- unlist(c("#E2D200", "#BFBFBF", "#46ACC8", "#E58601", rep("#BFBFBF",6))[cl$membership])
+#V(g)$frame.color <- unlist(c("#E2D200", "#BFBFBF", "#46ACC8", "#E58601", rep("#BFBFBF",6))[cl$membership])
+
+#layout <- layout.kamada.kawai(g)
+layout <- layout.random(g)
+
+par(mar=c(0,0,0,0)+.1)
+plot(g, margin=-0.1, layout=layout)
+```
+
+## Hadleyverse
+
+  - Ingest (rvest, xml2)
+  - Manipulate (**dplyr**)
+  - Visualize (ggplot2, ggvis)
+  - Create packages (devtools, testthat)
+  - Simplify programming (purrr, lazyeval)
+  - and data packages (ggplot2movies, nycflights13)
 
 ## dplyr
 
@@ -36,6 +115,7 @@ dplyr provides a set of tools to assemble, transform and summarize your data.
 * `mutate()`: add new columns
 * `summarise()`: reduce each group to a smaller number of summary statistics
 * `arrange()`: re-order the rows
+
 
 ## Multiple table verbs
 
