--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -7,10 +7,6 @@ output:
 
 ---
 
-## Previous dplyr Presentation
-Michael Levy gave a presentation to D-RUG Oct. 2014
-http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
-
 ## Hadleyverse
 ```{r loadanddownload, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= TRUE}
 #code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/
@@ -21,7 +17,7 @@ rds <- readRDS(file="packages.rds")
 data <- as.data.frame(rds, stringsAsFactors = FALSE)
 ```
 
-```{r igraphplot, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= FALSE, out.width=700, out.height=400}
+```{r igraphplot, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= FALSE, out.width=740, out.height=400}
 library(lazyeval)
 library(dplyr)
 library(igraph)
@@ -93,8 +89,7 @@ layout <- layout.random(g)
 par(mar=c(0,0,0,0)+.1)
 plot(g, margin=-0.1, layout=layout, asp=0)
 ```
-
-code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/
+<font size="2">code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/</font>
 
 
 ## Hadleyverse
@@ -110,6 +105,10 @@ code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-t
 
 dplyr provides a set of tools to assemble, transform and summarize your data. 
 
+
+## Previous dplyr Presentation
+Michael Levy's Intro to dplyr presentation to D-RUG Oct. 2014
+http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
 
 ## Single table verbs
 
