--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -6,6 +6,24 @@ output:
   ioslides_presentation
 
 ---
+<style type="text/css">
+pre {
+  font-family: 'Source Code Pro', 'Courier New', monospace;
+  font-size: 16px;
+  line-height: 17px;
+  padding: 5px 0 5px 5px;
+  letter-spacing: -1px;
+  margin-bottom: 5px;
+  width: 106%;
+  left: -60px;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  /*overflow: hidden;*/
+}
+</style>
+
 
 ## Hadleyverse
 ```{r loadanddownload, echo=FALSE, message = FALSE, error=FALSE, warning=FALSE, cache= TRUE}
@@ -141,12 +159,34 @@ The reality of data.
 
 ![image](http://r4ds.had.co.nz/diagrams/relational-nycflights.png)
 
-## Slide with R Code and Output
+<!-- The important thing to point out here is that it is rare that everything is stored in a single place and that sometimes it's not even got a single key that unifies everything so you have to join then join then join. --> 
 
-```{r}
-summary(cars)
+## Play Data
+
+```{r c3po, smaller)}
+set.seed(12345) #that's amazing, I've got the same combination on my luggage!
+x <- data.frame(key= LETTERS[c(1:3, 5)], value1 = sample(1:10, 4), stringsAsFactors = FALSE)
+y <- data.frame(key= LETTERS[c(1:4)], value2 = sample(1:10, 4), stringsAsFactors = FALSE)
+x
+y
 ```
 
+## inner_join
+
+Rows with matching keys from x and y.
+
+<center><img src="http://r4ds.had.co.nz/diagrams/join-inner.png" height="225px"/></center>
+
+
+## inner_join
+
+```{r r2d2}
+require(dplyr)
+inner_join(x,y)
+
+
+
+```
 ## Slide with Plot
 
 ```{r, echo=FALSE}
