--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -4,14 +4,13 @@ author: "Brandon Hurr"
 date: "February 2, 2016"
 output: 
   ioslides_presentation
-
 ---
 <style type="text/css">
 pre {
   font-family: 'Source Code Pro', 'Courier New', monospace;
   font-size: 16px;
   line-height: 17px;
-  padding: 5px 0 5px 5px;
+  padding: 25px 0 5px 5px;
   letter-spacing: -1px;
   margin-bottom: 5px;
   width: 106%;
@@ -21,6 +20,22 @@ pre {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   /*overflow: hidden;*/
+}
+
+fullwidth { 
+  width: 100%; 
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+partialheight { 
+  width: auto;
+  height: 20%; 
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 </style>
 
@@ -109,7 +124,6 @@ plot(g, margin=-0.1, layout=layout, asp=0)
 ```
 <font size="2">code shamelessly borrowed from : http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/</font>
 
-
 ## Hadleyverse
 
   - Ingest (rvest, readr, readxl)
@@ -124,10 +138,6 @@ plot(g, margin=-0.1, layout=layout, asp=0)
 dplyr provides a set of tools to assemble, transform, and summarize your data. 
 
 
-## Previous dplyr Presentation
-Michael Levy's Intro to dplyr presentation to D-RUG Oct. 2014
-http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
-
 ## Single table verbs
 
 `dplyr` implements the following verbs useful for data manipulation:
@@ -138,10 +148,14 @@ http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
 * `summarise()`: reduce each group to a smaller number of summary statistics
 * `arrange()`: re-order the rows
 
+## More information about single table verbs
+Michael Levy's Intro to dplyr presentation to D-RUG Oct. 2014
+http://michaellevy.name/blog/dplyr-data-manipulation-in-r-made-easy/
+
 
 ## Multiple table verbs (Joins)
 
-As well as verbs that work on a single tbl, there are also a set of useful verbs that work with two tbls at a time: joins and set operations.
+In addition to single table verbs, there are also a set of verbs that operate on two tables at a time: joins and set operations.
 
 * Joins
     + `inner_join(x, y)`: matching x + y
@@ -156,17 +170,17 @@ As well as verbs that work on a single tbl, there are also a set of useful verbs
 ## Why Joins?
 
 The reality of data.
-
-![image](http://r4ds.had.co.nz/diagrams/relational-nycflights.png)
-
+<center><img src="http://r4ds.had.co.nz/diagrams/relational-nycflights.png" height="400px"/></center>
 <!-- The important thing to point out here is that it is rare that everything is stored in a single place and that sometimes it's not even got a single key that unifies everything so you have to join then join then join. --> 
 
-## Play Data
+## Example Data Joins
 
 ```{r c3po, smaller)}
+require(dplyr)
 set.seed(12345) #that's amazing, I've got the same combination on my luggage!
 x <- data.frame(key= LETTERS[c(1:3, 5)], value1 = sample(1:10, 4), stringsAsFactors = FALSE)
 y <- data.frame(key= LETTERS[c(1:4)], value2 = sample(1:10, 4), stringsAsFactors = FALSE)
+
 x
 y
 ```
@@ -174,22 +188,113 @@ y
 ## inner_join
 
 Rows with matching keys from x and y.
-
-<center><img src="http://r4ds.had.co.nz/diagrams/join-inner.png" height="225px"/></center>
-
-
-## inner_join
-
-```{r r2d2}
-require(dplyr)
-inner_join(x,y)
-
-
-
-```
-## Slide with Plot
-
-```{r, echo=FALSE}
-plot(cars)
+<center>
+<img class="fullwidth" src="images/inner_join.svg">
+</center>
+```{r inner}
+inner_join(x, y, by = "key")
 ```
 
+## left_join
+All rows from x and those that match the key in y.
+<center>
+![left -fullwidth](images/left_join.svg)
+</center>
+```{r left}
+left_join(x, y, by = "key")
+```
+
+## right_join
+All rows from y and those that match the key in x.
+<center>
+![right -fullwidth](images/right_join.svg)
+</center>
+```{r right}
+right_join(x, y, by = "key")
+```
+
+## full_join
+All rows from x and y.
+<center>
+![full -fullwidth](images/full_join.svg)
+</center>
+```{r full}
+full_join(x, y, by = "key")
+```
+
+## Duplicate keys
+<font size="3">When you match keys on non-unique rows you get all possible combinations out. Be careful. </font>
+<center>
+![one2many -partialheight](images/one2many_join.svg)
+![many2many -partialheight](images/many2many_join.svg)
+</center>
+
+## Filtering Joins
+Semi and Anti joins don't actually join two datasets together. They filter one dataset based upon what's in another. This is useful when:
+
+  - you want to filter your dataset based upon another (semi)
+  - or want to understand what isn't in both datasets (anti)
+
+## semi_join
+All rows from x that have a key match in y.
+<center>
+![semi -fullwidth](images/semi_join.svg)
+</center>
+```{r semi}
+semi_join(x, y, by = "key")
+```
+
+## anti_join
+All rows from x that have no key match in y.
+<center>
+![ant- -fullwidth](images/anti_join.svg)
+</center>
+```{r anti}
+anti_join(x, y, by = "key")
+```
+
+## Set operations
+You have two datasets that should be the same, but you're not sure if they are. How do you easily test that they are the same? 
+
+* Sets
+    + `intersect(x, y)`: all rows in both x and y
+    + `union(x, y)`: rows in either x or y
+    + `setdiff(x, y)`: rows in x, but not y
+
+## Set Operations 2
+Set operations are on the entire row, there is no "key".
+![Thereisnospoon](https://kaworu.ch/images/there-is-no-spoon.jpg)
+
+## Example Data Set Ops
+
+```{r bwing)}
+df1 <- data_frame(x = LETTERS[1:2], y = c(1L, 1L))
+df2 <- data_frame(x = LETTERS[1:2], y = 1:2)
+
+df1
+
+df2
+```
+
+## intersect
+Which rows are common in both datasets?
+```{r xwing)}
+dplyr::intersect(df1, df2)
+```
+
+
+## union
+Want all unique rows between both datasets?
+```{r ywing)}
+dplyr::union(df1, df2)
+```
+
+## setdiff
+What's unique to df1?
+```{r awing)}
+dplyr::setdiff(df1, df2)
+```
+What's unique to df2?
+```{r tiefighter)}
+dplyr::setdiff(df2, df1)
+```
