--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -169,7 +169,7 @@ In addition to single table verbs, there are also a set of verbs that operate on
 
 ## Why Joins?
 
-The reality of data.
+Real data is messy.
 <center><img src="http://r4ds.had.co.nz/diagrams/relational-nycflights.png" height="400px"/></center>
 <!-- The important thing to point out here is that it is rare that everything is stored in a single place and that sometimes it's not even got a single key that unifies everything so you have to join then join then join. --> 
 
@@ -252,6 +252,19 @@ All rows from x that have no key match in y.
 ```{r anti}
 anti_join(x, y, by = "key")
 ```
+
+## Different keys?
+
+Real data is messy. If key1 is "date" and key2 is "Date" things break. So, specify:
+``` {r ATAT, error=TRUE} 
+set.seed(12345) #that's amazing, I've got the same combination on my luggage!
+x <- data.frame(keyX= LETTERS[c(1:3, 5)], value1 = sample(1:10, 4), stringsAsFactors = FALSE)
+y <- data.frame(keyY= LETTERS[c(1:4)], value2 = sample(1:10, 4), stringsAsFactors = FALSE)
+
+full_join(x, y)
+full_join(x, y, by=c("keyX" = "keyY"))
+```
+
 
 ## Set operations
 You have two datasets that should be the same, but you're not sure if they are. How do you easily test that they are the same? 
