--- a/TalkMain.Rmd
+++ b/TalkMain.Rmd
@@ -281,9 +281,11 @@ You have two datasets that should be the same, but you're not sure if they are. 
     + `union(x, y)`: rows in either x or y
     + `setdiff(x, y)`: rows in x, but not y
 
-## Set Operations 2
+## Set Operations
 Set operations are on the entire row, there is no "key".
+<center>
 ![Thereisnospoon](https://kaworu.ch/images/there-is-no-spoon.jpg)
+</center>
 
 ## Example Data Set Ops
 
@@ -318,3 +320,14 @@ What's unique to df2?
 ```{r tiefighter)}
 dplyr::setdiff(df2, df1)
 ```
+
+## Questions
+<center>
+<font size="20">?</font>
+</center>
+
+
+More information:
+  - http://r4ds.had.co.nz/relational-data.html
+
+<font size="2">All diagrams courtesy of Hadley Wickham</font>
